adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem dignissimos facere aliquid? Hic doloremque facere ab quo quibusdam quae veniam cupiditate sequi, dolorum aliquid aspernatur aliquam omnis totam qui dolorem.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et totam fuga adipisci dolor repellendus culpa assumenda aspernatur doloremque praesentium enim laudantium, beatae ipsa iste. Quos, aperiam architecto. Aperiam, vitae. Quos.</p>
 </body>
 </html>
